Adapts the submission information format so as to support the edx token validation

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -705,9 +705,10 @@
     "token = str(oauth.get_token())\n",
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
+    "    'header': 'NRP MOOC 2019',\n",
     "    'subheader': 'Exercise 2',\n",
     "    'filename': 'SOM_solution.py',\n",
-    "    'token': token,\n",
+    "    'oidc_token': token,\n",
     "    'collab_path': collab_path,\n",
     "    'clients_storage': clients.storage\n",
     "}\n",
