--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -960,9 +960,10 @@
     "token = str(oauth.get_token())\n",
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
+    "    'header': 'NRP MOOC 2019',\n",
     "    'subheader': 'Exercise 3',\n",
     "    'filename': 'SARSA_solution.py',\n",
-    "    'token': token,\n",
+    "    'oidc_token': token,\n",
     "    'collab_path': collab_path,\n",
     "    'clients_storage': clients.storage\n",
     "}\n",
