Detailed instructions for Exercise 1 (part 1)

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -237,7 +237,8 @@
    "source": [
     "from IPython.display import clear_output\n",
     "clear_output()\n",
-    "display_file_widgets(['robot_positions.csv', 'lattice.csv'])"
+    "display_file_widget('robot_positions.csv')\n",
+    "display_file_widget('lattice.csv')\n"
    ]
   },
   {
