New screenshots and replacements Exercise 1 --> Miniproject 0

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
@@ -77,7 +77,7 @@
     "--------------------------------------------\n",
     "\n",
     "## A. Fill in the gaps of the Braitenberg controller [NRP platform] <a id='A'></a>\n",
-    "The challenges of Section A shall be completed in the simulation environment of the [NRP](http://neurorobotics.net/). When joining the [NRP Web Cockpit](http://148.187.97.48/#/esv-private), you should have view similar to the one displayed below. We will explain now how to make a copy of ***Mini-Project 0*** in your private NRP storage and how to edit the experiment files in order to achieve the desired robot behaviour."
+    "The challenges of Section A shall be completed in the simulation environment of the [NRP](http://neurorobotics.net/). When joining the [NRP Web Cockpit](http://148.187.97.48/#/esv-private), you should have a browser view similar to the one displayed below. We will explain now how to make a copy of ***Mini-Project 0*** in your private NRP storage and how to edit the experiment files in order to achieve the desired robot behaviour."
    ]
   },
   {
@@ -212,9 +212,7 @@
    },
    "source": [
     " Open then the [*Transfer Function Editor*](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/user_interface/edit/7-gz3d-tf-editor.html) by pressing the following button:\n",
-    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/tf-icon.png)\n",
-    "\n",
-    "Then edit the files `velocity_commands.py` and `laser_sensors_transmit.py`. Follow the comments left in the code and tweak the values of the parameters `lin_max`, `lin_factor` and `ang_factor` in the first file, and the values of `idx_right`, `x_0` and `y_0` in the second file until the robot starts exploring its environment while avoiding obstacles."
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/tf-icon.png)"
    ]
   },
   {
@@ -228,12 +226,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then edit the files `velocity_commands.py` and `laser_sensors_transmit.py`. Follow the comments left in the code and tweak the values of the parameters `lin_max`, `lin_factor` and `ang_factor` in the first file, and the values of `idx_right`, `x_0` and `y_0` in the second file until the robot starts exploring its environment while avoiding obstacles. Further hints are given in the next sections."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "__A.2.1 Hints for *velocity_commands.py*__\n",
+    "\n",
+    "This transfer function updates the linear and angular velocities of the robot based on the electrical activity of the two actor neurons.\n",
+    "\n",
+    "The variable `lin_max` holds the value of the maximal linear velocity of the robot. \n",
+    "With the (non-negative) parameter `lin_factor`, you can control the transformation of the neuronal electrical activity into linear velocity commands. The formula `x_lin = max(0.0, lin_max - lin_factor * (right_actor.voltage + left_actor.voltage))` indicates that the linear velocity of the robot along `x` (the forward axis) deacreases when the sum of the actor neuron voltages increases. \n",
+    "\n",
+    "With the (non-negative) parameter `ang_factor`, you can control the transformation of the neuronal electrical activity into angular velocity commands.\n",
+    "The formula `z_ang = ang_factor * (left_actor.voltage - right_actor.voltage)` indicates that the robot will turn counter-clockwise around the `z` axis (upward vector) if the voltage of the left actor neuron is greater than the voltage of the right actor neuron.\n",
+    "\n",
     "\n",
     "Try successively these different values: (0.1, 0.2, 0.6) for `lin_max`, (80, 100, 120) for `lin_factor` and (30, 60, 90) for `ang_factor`."
    ]
@@ -241,14 +254,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
     "__A.2.2 Hints for *laser_sensors_transmit.py*__\n",
     "\n",
+    "This transfer function updates the spiking rate of each actor neuron based on the [laser range finder](http://wiki.ros.org/hokuyo_node) `range` values. The transformation of `range` values into spiking rates is handled by `activation_fct`.\n",
+    "\n",
     "- Depict for yourself the graph of the function `activation_fct(x, x_intercept, y_intercept)`.\n",
-    "- Try successively these different values: (1, 2, 3) for `x_0`, (70, 90, 100) for `y_0`."
+    "- Try successively these different values: (30, 45, 60) for `idx_right`, (1, 2, 3) for `x_0`, and (70, 90, 100) for `y_0`."
    ]
   },
   {
@@ -280,11 +294,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "Edit the file *move_robot.exd* so that the robot is moved every time it gets stuck. You need to add a new state of type `SetModelPose` to the state machine. This state is returned by the function `new_spawn()` provided for your convenience.The [SMACH StateMachines documentation](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/tutorials/experiment/state_machines.html?highlight=state%20machine) provides you with the API and few examples.\n",
+    "Edit the file `move_robot.exd` so that the robot is moved every time it gets stuck. You need to add a new state of type `SetModelPose` to the state machine. This state is returned by the function `new_spawn()` provided for your convenience.The [SMACH StateMachines documentation](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/tutorials/experiment/state_machines.html?highlight=state%20machine) provides you with the API and few examples.\n",
     "\n",
     "<font color=red>__Important:__</font> Save your changes and stop the simulation from the graphical user interface before going to the next section."
    ]
@@ -308,10 +321,14 @@
     "scrolled": true
    },
    "source": [
-    "The goal of this section is that you get familiar with the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html), a means of controlling simulations by scripts instead of using the Web Cockpit. You will only perform a **dry run**: start and then stop a single simulation through few python commands.\n",
+    "The goal of this section is that you get familiar with the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html), a means of controlling simulations by scripts, as opposed to the graphical Web Cockpit. \n",
+    "The [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html) is the Python API that allows you to run and interact with the experiments of the [Neurorobotics platform](https://neurorobotics.net/)\n",
     "\n",
-    "You need first to install the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html), the Python API that allows you to run and interact with the experiments of the [Neurorobotics platform](http://148.187.97.48/#/esv-private)\n",
-    "<font color=red>__Important:__</font> Run the cell below everytime you re-open this Jupyter notebook and go over this section"
+    "You will only perform a **dry run**: start and then stop a single simulation through few python commands.\n",
+    "\n",
+    "You need first to install the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html).\n",
+    "\n",
+    "<font color=red>__Important:__</font> Run the cell below everytime you re-open this Jupyter notebook when go over this section."
    ]
   },
   {
@@ -323,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": false,
     "scrolled": true
@@ -368,9 +385,9 @@
    },
    "source": [
     "--------------------------------------\n",
-    "__B.3.__ The next command will display the list of experiments located in your NRP storage (not to be confused with this Collab  <span style=\"background-color: #f6d351\">Storage</span>). <font color=red>\n",
+    "__B.3.__ The next command will display the list of experiments located in your NRP storage (not to be confused with this Collab <span style=\"background-color: #f6d351\">Storage</span>). <font color=red>\n",
     "    \n",
-    "__Important:__</font> check that __*'Miniproject0_0'*__, possibly __*'Miniproject0_<font color=red>i</font>'*__ if you made *i+1* copies, is one of them."
+    "__Important:__</font> check that __*'Miniproject0_0'*__, possibly __*'Miniproject0_<font color=red>i</font>'*__ if there are *i+1* copies, is one of them."
    ]
   },
   {
@@ -474,14 +491,14 @@
    "source": [
     "__C.1.__ ***From now on, we assume that you correctly implemented the Braitenberg exploration behaviour of the robot.***\n",
     "\n",
-    "You are going to launch __*Exercise 1*__ 's experiment again [(see Section B)](#B) and let the simulation record the robot positions for a sufficiently long time.\n",
+    "You are going to launch __*Mini-project 0*__ 's experiment again [(see Section B)](#B) and let the simulation record the robot positions for a sufficiently long time.\n",
     "\n",
     "To do so, you will have to:\n",
     "\n",
-    "- input the name of __*Exercise 1_i*__ according to a list of experiments that you will print below, \n",
+    "- input the name of __*Miniproject0_i*__ according to a list of experiments that you will print below, \n",
     "- input __simulation time__ in seconds. A sufficiently long time is not less than __900 seconds__.\n",
     "\n",
-    "Once you have run an experiment, you can join the simulation via the [Neurorobotics Platform](http://148.187.96.224/#/esv-private?dev) and check if the robot does a proper job. In the mean time, a transfer function is recording the robot position every 20 ms into the file `robot_positions.csv`."
+    "Once you have run an experiment, you can join the simulation via the [NRP Webcockpit](http://148.187.96.224/#/esv-private?dev) and check if the robot does a proper job. In the mean time, a transfer function is recording the robot position every 20 ms into the file `robot_positions.csv`."
    ]
   },
   {
@@ -492,9 +509,9 @@
    "source": [
     "\n",
     "You need to install the **[HBP Service Client](https://collab.humanbrainproject.eu/#/collab/509/nav/24072)**.\n",
-    "This is a Python API that provides convenient access to Collaboratory's Storage service. We will use it to save the generated file `robot_positions.csv` to this Collab storage.\n",
+    "This is a Python API that provides convenient access to Collaboratory's Storage service. We will use it to save the generated file `robot_positions.csv` to this Collab <span style=\"background-color: #f6d351\">Storage</span>.\n",
     "\n",
-    "<font color=red>__Important:__</font> Run the cell below everytime you re-open this Jupyter notebook and go over this section"
+    "<font color=red>__Important:__</font> Run the cell below everytime you re-open this Jupyter notebook if you need to go over this section."
    ]
   },
   {
@@ -515,7 +532,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "outputs": [],
@@ -531,7 +547,7 @@
     "vc = VirtualCoach(environment='dev', oidc_token=token)\n",
     "vc.print_cloned_experiments()\n",
     "\n",
-    "# Launch Exercise 1's experiment for a sufficiently long time\n",
+    "# Launch Mini-project 0's experiment for a sufficiently long time\n",
     "experiment = raw_input('Experiment name: ')\n",
     "sim_time = input('Simulation time (s): ')\n",
     "\n",
@@ -559,7 +575,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "outputs": [],
@@ -581,7 +596,7 @@
     "if clients.storage.exists(filepath): \n",
     "    clients.storage.delete(filepath)\n",
     "    \n",
-    "# Upload the latest recorded robot positions to your Collab storage\n",
+    "# Upload the latest recorded robot positions to your Collab Storage\n",
     "data = clients.storage.upload_file(filename, filepath, 'text/csv')"
    ]
   },
@@ -622,11 +637,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
-    "In this section, you only need to execute each cell in order to visualize the recorded robot positions."
+    "In this section, you only need to execute each cell in order to visualize the robot positions you have recorded in [Section C](#C)."
    ]
   },
   {
@@ -709,7 +723,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
