Replaces exercise by mini-project in the last two Jupyter notebooks

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -3,11 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "# Exercise 2\n",
+    "# Mini-project 1\n",
     "\n",
     "# Transform the recorded robot positions into a Self-Organizing Map (SOM)"
    ]
@@ -28,7 +27,7 @@
     "\n",
     "</br><div style=\"text-align: center\">*\" The spatial location of an output neuron in a topographic map corresponds to a particular domain or feature of data drawn the input space. \"*</div>\n",
     "\n",
-    "</br><div style=\"text-align: justify\">Based on this principle, we can say that since a self-organizing map is inherently non-linear it may be viewed as a non-linerar generalization of principal components analysis [3]. Thus, **the task we are going to solve in this exercise is to reduce the number of recorded robot positions by creating a self-orginizing map which captures the main features of the original dataset.**</div>\n",
+    "</br><div style=\"text-align: justify\">Based on this principle, we can say that since a self-organizing map is inherently non-linear it may be viewed as a non-linerar generalization of principal components analysis [3]. Thus, **the task we are going to solve in this mini-project is to reduce the number of recorded robot positions by creating a self-organizing map which captures the main features of the original dataset.**</div>\n",
     "\n",
     "\n",
     "</br>**References:**<div style=\"text-align: justify\"> [1] S. Haykin (1998), \"Neural Networks. A Comprehensive Foundation\", Second Edition, Prentice Hall (1998), Chapter 9, pp. 465-505.</div>\n",
@@ -45,19 +44,19 @@
     "--------------------------------------\n",
     "\n",
     "--------------------------------------\n",
-    "## Getting started: the solution of Excercise 1 <a id='S'></a>\n",
-    "</br><div style=\"text-align: justify\"> This exercise aims at generating a self-organizing map based on the recorded robot positions, i.e., `robot_positions.csv` from **Exercise 1**. If you haven't completed **Exercise 1**, you should follow next steps first:</div>\n",
+    "## Getting started: the solution of Mini-project 0 <a id='S'></a>\n",
+    "</br><div style=\"text-align: justify\"> This mini-project aims at generating a self-organizing map based on the recorded robot positions, i.e., `robot_positions.csv` from **Mini-project 0**. If you haven't completed **Mini-project 0**, you should follow next steps first:</div>\n",
     "\n",
     "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private) and select the __*Templates*__ tab.\n",
-    "- Select the experiment whose title starts with ***\"Exercise 2: ...\"*** (you can use the filter at the top right-end corner).\n",
+    "- Select the experiment whose title starts with ***\"Mini-project 1: ...\"*** (you can use the filter at the top right-end corner).\n",
     "- Press the __*Clone*__ button; now you own a copy of the experiment which is visible in __*My Experiments*__ tab.\n",
     "\n",
     "\n",
-    "- Open the <span style=\"background-color: #f6d351\">Week 1 - Exercise 1 (Jupyter Notebook)</span> in your Collab's space.\n",
+    "- Open the <span style=\"background-color: #f6d351\">Week 1 - Mini-project 0 (Jupyter Notebook)</span> in your Collab's space.\n",
     "- Move to the part __\"C. Record the robot positions\"__.\n",
-    "- Execute __\"C. Record the robot positions\"__ using __Exersice_<font color=red>2_i</font>__ from the list of NRP experiments you will obtain.\n",
+    "- Execute __\"C. Record the robot positions\"__ using __MiniProject_<font color=red>1_i</font>__ from the list of NRP experiments you will obtain.\n",
     "\n",
-    "**Remark:** Exercise 2's experiment contains the solution of Exercise 1."
+    "**Remark:** Mini-project 1's experiment contains the solution of Mini-project 0."
    ]
   },
   {
@@ -69,7 +68,7 @@
     "--------------------------------------------\n",
     "\n",
     "### Content:\n",
-    "- <font size=\"4\">**[A. Installation of utils and download of <span style=\"background-color: #f6d351\">Storage</span> files](#A)**</font></br>\n",
+    "- <font size=\"4\">**[A. Installation of SOM utils and download of Collab <span style=\"background-color: #f6d351\">Storage</span> files](#A)**</font></br>\n",
     ">- <font size=\"3\">[A.1. Install SOM utils](#A1)</font></br>\n",
     ">- <font size=\"3\">[A.2. Download csv input file from this Collab's <span style=\"background-color: #f6d351\">Storage</span>](#A2)</font></br>\n",
     "- <font size=\"4\">**[B. Complete the SOM implementation](#B)**</font></br>\n",
@@ -92,7 +91,7 @@
     "---------------------------------------------------\n",
     "\n",
     "---------------------------------------------------\n",
-    "## A. Installation of SOM utils and download of <span style=\"background-color: #f6d351\">Storage</span> files<a id='A'></a>"
+    "## A. Installation of SOM utils and download of Collab <span style=\"background-color: #f6d351\">Storage</span> files<a id='A'></a>"
    ]
   },
   {
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +262,7 @@
     "### B.1. Description of the SOM class <a id='B1'></a>\n",
     "****\n",
     "\n",
-    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it tp the dataset `robot_positions.csv` obtained in **Exercise 1**. The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
+    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it tp the dataset `robot_positions.csv` obtained in **Mini-project 0**. The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
     "\n",
     "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes thanks to functions of the `SOM_additional` module. These additional functions are already implemented and you shouldn't change them. As for the <font color=red>**\"TO DO\" part**</font>, this is  <font color=red>**your assignement**</font>. </div>\n",
     "\n",
@@ -383,13 +382,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "<font color=red>**IMPORTANT:**</font>\n",
     "<br>\n",
-    "</br><div style=\"text-align: justify\"> **1)** Be aware that the grading of your SOM class implementation will be performed <font color=red>**only with an SOM lattice of size 8x8**</font>. You can use other sizes of SOM to see how it works. For example, we will ask you to use a bigger lattice for Exercise 3 in the reinforcement learning implementation.</div>\n",
+    "</br><div style=\"text-align: justify\"> **1)** Be aware that the grading of your SOM class implementation will be performed <font color=red>**only with an SOM lattice of size 8x8**</font>. You can use other sizes of SOM to see how it works. For example, we will ask you to use a bigger lattice for Mini-project 2 in the reinforcement learning implementation.</div>\n",
     "</br><div style=\"text-align: justify\">**2)** Keep in mind that the grading process has a timeout. <font color=red>**This timeout is 240 seconds**</font>. If the simulation time exceeds this timeout, the submission will fail.</div>\n",
     "</br><div style=\"text-align: justify\">**3)** Once you are ready to submit, move to [B.3. Upload SOM function into the storage](#B3) and save your solution into Colllab's <span style=\"background-color: #f6d351\">Storage</span>. </div>\n",
     "</br><div style=\"text-align: justify\">**4)** Then **[submit](#Su)** your SOM class implementation for grading.</div>\n",
@@ -705,8 +703,8 @@
     "token = str(oauth.get_token())\n",
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
-    "    'header': 'NRP MOOC 2019',\n",
-    "    'subheader': 'Exercise 2',\n",
+    "    'header': 'EPFLx-RoboX-Neurorobotics 2019',\n",
+    "    'subheader': 'Mini-project 1',\n",
     "    'filename': 'SOM_solution.py',\n",
     "    'oidc_token': token,\n",
     "    'collab_path': collab_path,\n",
@@ -718,22 +716,23 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
