--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 3\n",
+    "# Mini-project 2\n",
     "# Navigate the robot between any two points of its environment"
    ]
   },
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "### Getting started\n",
-    "You have now solved Exercise 1 and Exercise 2. Your Collab <span style=\"background-color: #f6d351\">Storage</span> should hold two csv-files, namely the result of Exercise 1, that is, `robot_positions.csv`, and the result of  Exercise 2 , that is `lattice.csv`. Check whether these files exist in your Collab's <span style=\"background-color: #f6d351\">Storage</span> before going any further. If any of these files is missing, resume to Section C of Exercise 2 or 3.</div>"
+    "You have now solved Mini-project 0 and Mini-project 1. Your Collab <span style=\"background-color: #f6d351\">Storage</span> should hold two csv files, namely the result of Mini-project 0, that is, `robot_positions.csv`, and the result of  Mini-project 1 , that is `lattice.csv`. Check whether these files exist in your Collab's <span style=\"background-color: #f6d351\">Storage</span> before going any further. If any of these files is missing, resume to Section C of Mini-project 0 or 1.</div>"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "source": [
     "</br>\n",
-    "<div style=\"text-align: justify\">In Exercise 2, we obtained an SOM-lattice that drastically reduced the original dataset while outlining its key toplogical features. In this exercise, we will alway refer to the SOM-lattice coordinates (integer coordinates), as opposed to the actual Cartesian coordinates of the environment (the robot arena). Our SARSA robot will move straight from one node of the SOM-lattice to one of its nearest neighbours. Since transitioning to a nearest neightboor can be prevented by obstacles, we define an the availability of each node through an actions table.</div>\n",
+    "<div style=\"text-align: justify\">In Mini-project 1, we obtained an SOM-lattice that drastically reduced the original dataset while outlining its key toplogical features. In this mini-project, we will alway refer to the SOM-lattice coordinates (integer coordinates), as opposed to the actual Cartesian coordinates of the environment (the robot arena). Our SARSA robot will move straight from one node of the SOM-lattice to one of its nearest neighbours. Since transitioning to a nearest neighbour can be prevented by obstacles, we define an the availability of each node through an actions table.</div>\n",
     "\n",
     "Once you have executed the next cell, you will see:\n",
     "\n",
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "</br><div style=\"text-align: justify\">Your task is to implement the SARSA algorithm with eligibility trace and to apply it to the environment, that is, the SOM-lattice of Exercise 2. Note that this environment is contained in `lattice.csv` by default. Taking `lattice.csv` as input, the cell [B.1. Generate your maze based on the SOM data](#B1) has generated an **actions table** which is now saved into `actions.csv`.</div>\n",
+    "</br><div style=\"text-align: justify\">Your task is to implement the SARSA algorithm with eligibility trace and to apply it to the environment, that is, the SOM-lattice of Mini-project 1. Note that this environment is contained in `lattice.csv` by default. Taking `lattice.csv` as input, the cell [B.1. Generate your maze based on the SOM data](#B1) has generated an **actions table** which is now saved into `actions.csv`.</div>\n",
     "\n",
     "</br><div style=\"text-align: justify\">A template SARSA class is located in part [C.2. Complete the SARSA class](#C2). Once you have filled in the gaps of the implementation, you will instantiate this class to simulate the SARSA algorithm. </div>\n",
     "\n",
@@ -421,7 +421,7 @@
     "**Variables (<font color=dimgrey>uneditable</font>; <font color=blue>generated ([B](#B))</font>; constants; <font color=sienna>variables</font>):**<br>\n",
     " - <font color=dimgrey>**self.display:**</font> visualization mode (`'simulation'`, `'environment'`, `'square_maze'`, `'latency'`).<br>\n",
     " - <font color=dimgrey>**self.Nn:**</font> maze or SOM width.<br>\n",
-    " - <font color=dimgrey>**self.lattice:**</font> SOM-lattice [_Nn_ x _Nn_ x 2], built using of the file `lattice.csv` of Exercise 2.<br>\n",
+    " - <font color=dimgrey>**self.lattice:**</font> SOM-lattice [_Nn_ x _Nn_ x 2], built using of the file `lattice.csv` of Mini-project 1.<br>\n",
     " - <font color=dimgrey>**self.latency_list:**</font> list of the latencies used for visualization; initialized as an empty list.<br>\n",
     " - <font color=dimgrey>**self.episode:**</font> index of current episode; the initial value is `0`.<br>\n",
     " <br>\n",
@@ -916,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### F.3. Run Exercise 3's experiment within the NRP <a id='F3'></a>"
+    "### F.3. Run Mini-project 2's experiment within the NRP <a id='F3'></a>"
    ]
   },
   {
@@ -927,10 +927,10 @@
     "\n",
     "- Download the files`lattice_data.csv` and `waypoints.csv` from your Collab <span style=\"background-color: #f6d351\">Storage</span>.\n",
     "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev) and select the ***Templates*** tab.\n",
-    "- Select *Exercise_3* in the list of Templates (use the search filter) and press the ***Clone*** button.\n",
-    "- Select the ***Experiment files*** tab and open the *Exercise_3* folder.\n",
+    "- Select *Mini-project 2* in the list of Templates (use the search filter) and press the ***Clone*** button.\n",
+    "- Select the ***Experiment files*** tab and open the *Miniproject_2* folder.\n",
     "- Upload the files `lattice.csv` and `waypoints.csv` into the Experiment files storage.\n",
-    "- Move back to the ***My experiments*** tab and launch ***\"Exercise_3: Navigate ...\"***.\n",
+    "- Move back to the ***My experiments*** tab and launch ***\"Mini-project 2: Navigate ...\"***.\n",
     "- Run the simulation and check if the robot navigates through the specified waypoints."
    ]
   },
@@ -961,8 +961,8 @@
     "token = str(oauth.get_token())\n",
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
-    "    'header': 'NRP MOOC 2019',\n",
-    "    'subheader': 'Exercise 3',\n",
+    "    'header': 'EPFLx-RoboX-Neurorobotics 2019',\n",
+    "    'subheader': 'Mini-project 2',\n",
     "    'filename': 'SARSA_solution.py',\n",
     "    'oidc_token': token,\n",
     "    'collab_path': collab_path,\n",
@@ -975,21 +975,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
