Fixes the default version of the python kernel: it has to be Python 2

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "- Open the <span style=\"background-color: #f6d351\">Week 1 - Mini-project 0 (Jupyter Notebook)</span> in your Collab's space.\n",
     "- Move to the part __\"C. Record the robot positions\"__.\n",
-    "- Execute __\"C. Record the robot positions\"__ using __MiniProject_<font color=red>1_i</font>__ from the list of NRP experiments you will obtain.\n",
+    "- Execute __\"C. Record the robot positions\"__ using __Miniproject_<font color=red>1_i</font>__ from the list of NRP experiments you will obtain.\n",
     "\n",
     "**Remark:** Mini-project 1's experiment contains the solution of Mini-project 0."
    ]
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,23 +716,22 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
