--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
@@ -238,7 +238,7 @@
     "from IPython.display import clear_output\n",
     "clear_output()\n",
     "display_file_widget('robot_positions.csv')\n",
-    "display_file_widget('lattice.csv')\n"
+    "display_file_widget('lattice.csv')"
    ]
   },
   {
@@ -975,21 +975,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
