Fixes a typo in saving instructions

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -625,7 +625,7 @@
    "source": [
     "### C.2. Save the feature map<a id='C2'></a>\n",
     "The output of the SOM training is the SOM lattice, also called feature map. This lattice is represented with the red color on the visualization figure. \n",
-    "The lattice data was saved into the file `lattice.csv` which is now contained in this Jupyter notebook space. This commands upload the `lattice.csv` into your Collab <span style=\"background-color: #f6d351\">Storage</span>. \n",
+    "The lattice data was saved into the file `lattice.csv` which is now contained in this Jupyter notebook space.\n",
     "\n",
     "Run the cell below and then check in your Collab <span style=\"background-color: #f6d351\">Storage</span> if the `lattice.csv` has been saved."
    ]
